plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.gorylenko.gradle-git-properties' version '2.5.7'
}

group = 'xin.vanilla'
version = '1.0.0'

ext {
    appMainClassName = 'xin.vanilla.banira.start.BaniraApplication'
}

def buildJavaVersion = System.getProperty('java.version') ?: JavaVersion.current().toString()

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    flatDir {
        dir 'libs'
    }
    mavenLocal()
    maven { url 'https://maven.aliyun.com/repository/public' }
    maven { url "https://jitpack.io" }
    mavenCentral()
}

dependencies {
    // Spring & JDBC auto-config & aop
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-aspectj'

    // MyBatis-Plus for Spring Boot 4
    implementation 'com.baomidou:mybatis-plus-spring-boot4-starter:3.5.16'

    // SQLite JDBC driver
    implementation 'org.xerial:sqlite-jdbc:3.53.1.0'

    // Shiro
    implementation 'com.mikuac:shiro:2.5.4'

    // YAML config via Jackson
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.21.3'

    // Validation
    implementation 'jakarta.validation:jakarta.validation-api:3.1.1'
    implementation 'org.hibernate.validator:hibernate-validator:9.1.0.Final'

    // Hutool
    implementation 'cn.hutool:hutool-all:5.8.44'
    // PinYin
    implementation 'com.github.houbb:pinyin:0.4.0'
    // RCON
    implementation 'xin.vanilla.rcon:rcon:1.2.1'
    // OSHI
    implementation 'com.github.oshi:oshi-core:7.1.0'
    // Word Cloud
    implementation 'com.kennycason:kumo-core:1.28'
    implementation 'com.kennycason:kumo-tokenizers:1.28'
    // Web Testing and Automation
    implementation 'com.microsoft.playwright:playwright:1.59.0'
    // Quartz
    implementation 'org.quartz-scheduler:quartz:2.5.2'
    // Sensitive Word
    implementation 'com.github.houbb:sensitive-word:0.29.5'
    // LangChain
    implementation 'dev.langchain4j:langchain4j:1.15.0'
    implementation 'dev.langchain4j:langchain4j-open-ai:1.15.0'
    implementation 'dev.langchain4j:langchain4j-http-client-jdk:1.15.0'
    // Jsoup
    implementation 'org.jsoup:jsoup:1.22.2'


    // Libs
    implementation fileTree(dir: 'libs', include: ['*.jar'])


    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.46'
    annotationProcessor 'org.projectlombok:lombok:1.18.46'

    // Tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('processResources') {
    from('src/main/java') {
        include 'xin/vanilla/banira/mapper/mybatis/mybatis-*.xml'
    }
}

// region 瘦包：主 jar（扁平类路径）+ libs/ 依赖
bootJar {
    enabled = false
}

def thinRuntimeClasspath = configurations.runtimeClasspath

def thinManifestClassPath = { ->
    thinRuntimeClasspath.files.collect { "libs/${it.name}" }.join(' ')
}

// 清除现有的 libs 目录
tasks.register('clearJar', Delete) {
    delete file("${buildDir}/libs/libs")
}

// 将运行时依赖复制到 libs 目录
tasks.register('copyJar', Copy) {
    dependsOn 'clearJar'
    from thinRuntimeClasspath
    into file("${buildDir}/libs/libs")
}

tasks.named('jar') {
    enabled = true
    archiveClassifier.set('')
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    dependsOn copyJar

    manifest {
        attributes(
                'Implementation-Title': project.name,
                'Implementation-Version': project.version,
                'Built-By': System.getProperty('user.name'),
                'Created-By': "Gradle ${gradle.gradleVersion}",
                'Built-Java': buildJavaVersion,
                'Manifest-Version': 1.0,
                'Main-Class': appMainClassName,
                'Class-Path': thinManifestClassPath()
        )
    }
}
// endregion 瘦包

def safeGitOutput = { String... args ->
    try {
        def cmd = new ArrayList<String>()
        cmd.add('git')
        cmd.addAll(args)
        def pb = new ProcessBuilder(cmd)
        pb.redirectErrorStream(true)
        def p = pb.start()
        def out = p.inputStream.getText('UTF-8').trim()
        return p.waitFor() == 0 && out ? out : null
    } catch (Throwable ignored) {
        return null
    }
}

gitProperties {
    keys = ['git.branch', 'git.commit.id.abbrev', 'git.commit.time']

    customProperty('git.commit.count') {
        safeGitOutput('rev-list', '--count', 'HEAD') ?: '0'
    }

    customProperty('git.last.commit.short') {
        safeGitOutput('rev-parse', '--short=7', 'HEAD') ?: 'unknown'
    }

    dateFormat = "yyyy-MM-dd HH:mm:ss"
    dateFormatTimeZone = "UTC"
}
